genealogy-macros/tests/ui/tuple_struct.stderr
error: #[record] is only allowed for structs with named fields.
 --> tests/ui/tuple_struct.rs:4:19
  |
4 | struct TupleStruct(i32);
  |                   ^^^^^
