genealogy-macros/tests/ui/tuple_struct.rs
use genealogy_macros::record;

#[record]
struct TupleStruct(i32);

pub fn main() {}
